@startuml
left to right direction

class Usuario {
    +id: int
    +nome: String
    +email: String
    +senha: String
    +tipo: String
    +criarConta()
    +editarConta()
    +removerConta()
}

class Locador {
    +id: int
    +usuario: Usuario
    +cadastrarImovel()
    +editarImovel()
    +removerImovel()
}

class Locatario {
    +id: int
    +usuario: Usuario
    +fazerReserva()
    +cancelarReserva()
}

class Imovel {
    +id: int
    +tipo: String
    +localizacao: String
    +preco: double
    +quartos: int
    +banheiros: int
    +descricao: String
    +cadastrar()
    +editar()
    +remover()
}

class Reserva {
    +id: int
    +locatario: Locatario
    +imovel: Imovel
    +dataInicio: Date
    +dataFim: Date
    +status: String
    +verificarDisponibilidade()
    +confirmar()
    +cancelar()
}

class Pagamento {
    +id: int
    +reserva: Reserva
    +metodoPagamento: String
    +status: String
    +realizarPagamento()
    +emitirComprovante()
    +solicitarReembolso()
}

class Avaliacao {
    +id: int
    +locatario: Locatario
    +imovel: Imovel
    +comentario: String
    +nota: int
    +publicar()
}

Usuario <|-- Locador
Usuario <|-- Locatario
Locador "1" -- "*" Imovel: possui >
Locatario "1" -- "*" Reserva: faz >
Imovel "1" -- "*" Reserva: possui >
Reserva "1" -- "1" Pagamento: gera >
Locatario "1" -- "*" Avaliacao: escreve >
Imovel "1" -- "*" Avaliacao: recebe >

@enduml
